--- a/wine_lizzy copy/index.html
+++ b/wine_lizzy copy/index.html
@@ -22,9 +22,31 @@
 					<h1>Wine Imports/Exports: interact with year brush, category selector</h1>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-6">
+					<div class="row justify-content-center">
+						<select id='flowSelector' class="custom-select align-self-center shadow-none">
+							<option value="import" selected>by import</option>
+							<option value="export">by export</option>
+						</select>
+					</div>
+				</div>
+				<div class="col-6">
+					<div class="row justify-content-center">
+						<select id='metricSelector' class="custom-select align-self-center shadow-none">
+							<option value="value_thousand_USD" selected>trade value (k USD)</option>
+							<option value="quantity_metric_tons">trade volume (metric tons)</option>
+						</select>
+					</div>
+				</div>
+			</div>
 			<div class="row justify-content-center">
 				<div id="mapDiv"></div>
 			</div>
+			<div class="row justify-content-center">
+				<div id="brushDiv"></div>
+			</div>
+
 		</div>
 
 
@@ -47,6 +69,8 @@
 		<!-- OWN JS -->
 
 		<script src="js/mapVis.js"></script>
+		<script src="js/brushVis.js"></script>
+		<script src="js/helpers.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
