--- a/wine_lizzy copy/index.html
+++ b/wine_lizzy copy/index.html
@@ -25,17 +25,17 @@
 			<div class="row">
 				<div class="col-6">
 					<div class="row justify-content-center">
-						<select id='flowSelector' class="custom-select align-self-center shadow-none">
-							<option value="import" selected>by import</option>
-							<option value="export">by export</option>
+						<select id='flowSelector' class="custom-select align-self-center shadow-none" onchange="categoryChange()">
+							<option value="import_country" selected>by import</option>
+							<option value="export_country">by export</option>
 						</select>
 					</div>
 				</div>
 				<div class="col-6">
 					<div class="row justify-content-center">
-						<select id='metricSelector' class="custom-select align-self-center shadow-none">
-							<option value="value_thousand_USD" selected>trade value (k USD)</option>
-							<option value="quantity_metric_tons">trade volume (metric tons)</option>
+						<select id='metricSelector' class="custom-select align-self-center shadow-none" onchange="categoryChange()">
+							<option value="valueTrade" selected>trade value (k USD)</option>
+							<option value="quantityTrade">trade volume (metric tons)</option>
 						</select>
 					</div>
 				</div>
