--- a/radar_plots_hannah/index.html
+++ b/radar_plots_hannah/index.html
@@ -8,13 +8,13 @@
 <body>
 
 <div class="container-fluid">
-  <h1>Wine Attributes</h1>
+  <h1>What Makes Wine Good or Bad?</h1>
   <h2>Explore Wines by Chemical Properties</h2>
 
 
   <div class="row" style="height: 100%">
-    <div class="col-2" style="background: white; border: thin solid grey; border-radius: 5px">
-      <div class="row justify-content-center" style="height: 100%; background-color: lightgray; border-radius: 5px; border-color: black">
+    <div class="col-2" style="background: white;">
+      <div class="row justify-content-center" style="height: 60%; background-color: lightgray; border-radius: 5px; border-color: black">
         <h5> Choose Wine Type: </h5>
         <form class="form-inline">
           <div class="form-group">
