final bubble chart

--- a/winebubble_lizzy copy/index.html
+++ b/winebubble_lizzy copy/index.html
@@ -17,16 +17,15 @@
 
 	<body>
 		<div class="container-fluid">
-			<div class="row justify-content-center">
-				<div class="align-self-center">
-					<h1>Wine Bubble Chart</h1>
-				</div>
-			</div>
+<!--			<div class="row justify-content-center">-->
+<!--				<div class="align-self-center">-->
+<!--					<h1>Wine Bubble Chart</h1>-->
+<!--				</div>-->
+<!--			</div>-->
 
 			<div class="row justify-content-center">
 				<div id="bubbleDiv"></div>
 			</div>
-
 
 		</div>
 
