Added narrative to webpage

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -34,7 +34,8 @@
 <section id="section2" class="cd-section">
 	<div class="content-wrapper">
 		<h2>WINE WORLDWIDE</h2>
-		<p>Produced for thousands of years in hundreds of countries, wine has become a symbol for leisure, culture, and refinement. Today, wine is a XXXBillion dollar industry enjoyed by XXX drinkers worldwide. Countries A, B, and C, are the top exporters, famed for their careful wine cultivation. (transition to next section) Seeing how specialized wine production has become, we ask: what makes a wine so good?</p>
+		<p>Produced for thousands of years in hundreds of countries, wine has become a symbol for leisure, culture, and refinement. Today, wine is ubiquitously enjoyed across the world. Take a look at the largest wine importing and exporting countries, by both trade value and trade volume. Select a time range by brushing over the timeline below, and hover over any country for more specific information.
+			Seeing how specialized wine production has become, we ask: what makes a wine so good?</p>
 		<div class="row">
 			<img src="img/wine%20grap%20vis.jpg" style="width: 20%; height: 20%">
 			<img src="img/map.png" style="width: 20%; height: 20%">
@@ -45,7 +46,8 @@
 <section id="section3" class="cd-section">
 	<div class="content-wrapper">
 		<h2>THE CHEMISTRY OF WINE</h2>
-		<p>Experts broke down the chemical attributes of wines and measured them against expert wine quality ratings. Comparing high and low quality wines, we see that high quality wines tend to be more XXX. </p>
+		<p>When trying to think about how wine is characterized a s good or bad, we can either turn to expert sommeliers, whose descriptions you’ll be able to see later, or how science has looked at these things. In a machine learning study, wine scientists (the best job ever) created a model with the listed chemical properties of wine and taught the AI how to categorize wines as good or bad. Play with the properties in both red and white wine to see
+		</p>
 		<img src="img/radar.png" style="width: 20%; height: 20%">
 	</div>
 </section><!-- cd-section -->
