--- a/wineVariety_katie/index.html
+++ b/wineVariety_katie/index.html
@@ -34,7 +34,7 @@
     <div class="row" style="height: 73vh; padding-top: 0; padding-left: 1vh; padding-right: 1vh;">
         <div class="col">
             <div class="row" style="border: thin solid rgba(211,211,211,0.73); border-radius: 5px; background: rgba(214,226,233,0.42)">
-                <div class="col">
+                <div class="col" style="height: 100%">
                     <div id="wordcloudDiv" style="height: 100%; width:100%"></div>
                 </div>
                 <div class="col">
