Webpage with Hannah's portion added

--- a/wineweb_hannah copy/index.html
+++ b/wineweb_hannah copy/index.html
@@ -83,10 +83,15 @@
 <section id="section3" class="cd-section">
 	<div class="content-wrapper">
 		<h2>THE CHEMISTRY OF WINE</h2>
-		<p>Experts broke down the chemical attributes of wines and measured them against expert wine quality ratings. Comparing high and low quality wines, we see that high quality wines tend to be more XXX. </p>
-		<div class="row" style="height: 80%">
+		<p>
+			When trying to think about how wine is characterized a s good or bad, we can either turn to expert sommeliers,
+			whose descriptions you’ll be able to see later, or how science has looked at these things. In a machine learning
+			study, wine scientists (the best job ever) created a model with the listed chemical properties of wine and taught
+			the AI how to categorize wines as good or bad. Play with the properties in both red and white wine to see
+		</p>
+		<div class="row" style="height: 65%">
 			<div class="col-2">
-				<div class="row justify-content-center" style="height: 60%; background-color: darkslategray; border-radius: 5px; border-color: black">
+				<div class="row justify-content-center" style="height: 80%; background-color: darkslategray; border-radius: 5px; border-color: black">
 					<h5> Choose Attributes to Compare</h5>
 					<form>
 						<input type="checkbox" id="attribute1" value="alcohol" onchange="onSelectionChange()" checked>
