color formatting, bubble chart, icons fixed

--- a/FINAL_COMBINED/index.html
+++ b/FINAL_COMBINED/index.html
@@ -23,8 +23,7 @@
 		<li><a href="#section2"><span class="label">Map</span></a></li>
 		<li><a href="#section3"><span class="label">Chemicals</span></a></li>
 		<li><a href="#section4"><span class="label">Descriptors</span></a></li>
-		<li><a href="#section5"><span class="label">Bubble</span></a></li>
-		<li><a href="#section6"><span class="label">Variety</span></a></li>
+		<li><a href="#section5"><span class="label">Price</span></a></li>
 	</ul>
 </nav><!-- .cd-vertical-nav -->
 
@@ -166,31 +165,16 @@
 	</div>
 </section><!-- cd-section -->
 
+<!--<section id="section4" class="cd-section">-->
+<!--	<div class="content-wrapper">-->
+<!--		<h2>EXPLORE YOUR TASTE</h2>-->
+<!--		<p>This visualization allows for wine discovery in by the audience’s preferences. Seeing a word cloud of common descriptors, the audience will be able to select intriguing descriptors to their taste preferences, to find what the top 5 wines are.-->
+<!--		</p>-->
+<!--		<img src="img/IMG_5213.jpg" style="width: 80%; height: 10%">-->
+<!--	</div>-->
+<!--</section>&lt;!&ndash; cd-section &ndash;&gt;-->
+
 <section id="section4" class="cd-section">
-	<div class="content-wrapper">
-		<h2>EXPLORE YOUR TASTE</h2>
-		<p>This visualization allows for wine discovery in by the audience’s preferences. Seeing a word cloud of common descriptors, the audience will be able to select intriguing descriptors to their taste preferences, to find what the top 5 wines are.
-		</p>
-		<img src="img/IMG_5213.jpg" style="width: 80%; height: 10%">
-	</div>
-</section><!-- cd-section -->
-
-<section id="section5" class="cd-section">
-	<div class="container-fluid">
-		<h2>BUBBLE CHART</h2>
-		<p>
-			A great number of wine varieties can be enjoyed, no matter your budget.
-			The top 20 most prevalent varieties within each price tier are clustered together, sized by their prevalence.
-			Hover over each grape to see each variety’s average price, within the price tier.
-		</p>
-		<div class="row justify-content-center">
-			<div id="bubbleDiv"></div>
-		</div>
-
-	</div>
-</section><!-- cd-section -->
-
-<section id="section6" class="cd-section">
 	<div class="container-fluid">
 		<h2>DISCOVER WINE VARIETIES</h2>
 		<div class="container-fluid" style="height: 150vh; padding-top: 1vh">
@@ -253,6 +237,20 @@
 				</div>
 			</div>
 		</div>
+	</div>
+</section><!-- cd-section -->
+
+<section id="section5" class="cd-section">
+	<div class="container-fluid">
+		<h2>WINE BY PRICE TIER</h2>
+		<p>A great number of wine varieties can be enjoyed, no matter your budget.
+			The top 20 most prevalent varieties within each price tier are clustered together, sized by their prevalence.
+			Hover over each grape to see each variety’s average price, within the price tier.
+		</p>
+		<div class="row justify-content-center">
+			<div id="bubbleDiv"></div>
+		</div>
+
 	</div>
 </section><!-- cd-section -->
 	
