--- a/FINAL_COMBINED/index.html
+++ b/FINAL_COMBINED/index.html
@@ -96,9 +96,24 @@
 				which goes from 1-10, but only ended up using the range 3-8 in the predictions.
 			</p>
 		</div>
-		<div class="row" style="height: 30%">
+		<div class="row" style="height: 50%">
 			<div class="col-2">
 				<div class="row justify-content-center" style="height: 100%; background-color: darkslategray; border-radius: 5px; border-color: black">
+					<h5> Choose Quality Levels to Compare</h5>
+					<form>
+						<input type="checkbox" id="quality3" value="3" onchange="onSelectionChange()" checked>
+						<label for="quality3"> Quality: 3 </label><br>
+						<input type="checkbox" id="quality4" value="4" onchange="onSelectionChange()" checked>
+						<label for="quality4"> Quality: 4 </label><br>
+						<input type="checkbox" id="quality5" value="5" onchange="onSelectionChange()" checked>
+						<label for="quality5"> Quality: 5 </label><br>
+						<input type="checkbox" id="quality6" value="3" onchange="onSelectionChange()" checked>
+						<label for="quality6"> Quality: 6 </label><br>
+						<input type="checkbox" id="quality7" value="7" onchange="onSelectionChange()" checked>
+						<label for="quality7"> Quality: 7 </label><br>
+						<input type="checkbox" id="quality8" value="7" onchange="onSelectionChange()" checked>
+						<label for="quality7"> Quality: 8 </label><br>
+					</form>
 					<h5> Choose Attributes to Compare</h5>
 					<form>
 						<input type="checkbox" id="attribute1" value="alcohol" onchange="onSelectionChange()" checked>
@@ -126,16 +141,22 @@
 					</form>
 				</div>
 			</div>
-			<div class="col-5" style="height: 40%">
+			<div class="col-5" style="height: 100%">
 				<div class="row justify-content-center" style="height: 100%">
-					<div id ="top-wine" class="align-self-center" style="height: 100%; width: 100%">
+					<div id ="top-wine" class="align-self-center" style="height: 80%; width: 100%">
+
+					</div>
+					<div id ="white-legend" class="align-self-center" style="height: 20%; width: 100%">
 
 					</div>
 				</div>
 			</div>
-			<div class="col-5" style="height: 40%">
+			<div class="col-5" style="height: 100%">
 				<div class="row justify-content-center" style="height: 100%">
-					<div id ="bottom-wine" class=" align-self-center" style="height: 100%; width: 100%">
+					<div id ="bottom-wine" class=" align-self-center" style="height: 80%; width: 100%">
+					</div>
+					<div id ="red-legend" class="align-self-center" style="height: 20%; width: 100%">
+
 					</div>
 				</div>
 			</div>
