Formatting and Takeaway Updates

--- a/FINAL_COMBINED/index.html
+++ b/FINAL_COMBINED/index.html
@@ -164,7 +164,7 @@
 		<div class="row">
 			<div class="col">
 				<p style="font-size: 25px;"> Chemical Components Translation</p>
-				<ul style="font-size: 15px;">
+				<ul style="font-size: 15px">
 					<li>Alcohol: Alcohol by volume (the good stuff) </li>
 					<li>pH: Overall measure of acidity</li>
 					<li>Citric Acid: What typically makes something sour, adds freshness</li>
@@ -180,7 +180,19 @@
 			</div>
 			<div class="col">
 				<p style="font-size: 25px;"> Takeaways</p>
-				<p> </p>
+				<p style="font-size: 15px;  color: white;">
+					For white wines, the wines have larger variation between high quality wines (7-8) and low quality wines (3-4). For high quality
+					wines, they tend to have higher alcohol content, which goes well with white wines higher levels of sweetness overall. High
+					quality white wines also have low density, most likely due to the thought that white wine is supposed to be a lighter wine than red. For
+					the low quality wines, high acidity and sulfur dioxides are common. This is because both make the wines more bitter tasting, something
+					white wine drinkers often avoid.
+				</p>
+				<p style="font-size: 15px; color: white">
+					For red wines, there is little differentiation in high and low quality wine in terms of their chemical attributes. Both the highest
+					and lowest rankings, eight and three respectively, have higher density, alcohol levels, and pH. The difference comes from the highest quality
+					having lower sugar and less sulfates than the lowest quality. However, there is not much differentiation at all when it comes to chemical attributes
+					, so just pick whichever one has the prettiest bottle (that's what I do)
+				</p>
 			</div>
 		</div>
 	</div>
