--- a/FINAL_COMBINED/index.html
+++ b/FINAL_COMBINED/index.html
@@ -19,11 +19,13 @@
 <body>
 <nav class="cd-vertical-nav">
 	<ul>
-		<li><a href="#section1" class="active"><span class="label">Intro</span></a></li>
+		<li><a href="#section1" class="active"><span class="label">Title</span></a></li>
+		<li><a href="#section1b"><span class="label">Intro</span></a></li>
 		<li><a href="#section2"><span class="label">Map</span></a></li>
 		<li><a href="#section3"><span class="label">Chemicals</span></a></li>
 		<li><a href="#section4"><span class="label">Descriptors</span></a></li>
 		<li><a href="#section5"><span class="label">Price</span></a></li>
+		<li><a href="#section6"><span class="label">Conclusion</span></a></li>
 	</ul>
 </nav><!-- .cd-vertical-nav -->
 
@@ -32,9 +34,16 @@
 <section id="section1" class="cd-section">
 	<div class="content-wrapper">
 		<h1>WINE <b>101</b></h1>
-		<a href="#section2" class="cd-scroll-down cd-image-replace">scroll down</a>
+<!--		<a href="#section2" class="cd-scroll-down cd-image-replace">scroll down</a>-->
 	</div>
 </section><!-- cd-section -->
+
+<section id="section1b" class="cd-section">
+	<div class="container-fluid">
+		Intro Here
+	</div>
+</section><!-- cd-section -->
+
 
 <section id="section2" class="cd-section">
 	<div class="container-fluid">
@@ -278,7 +287,7 @@
 		<h2>WINE BY PRICE TIER</h2>
 		<p>A great number of wine varieties can be enjoyed, no matter your budget.
 			The top 20 most prevalent varieties within each price tier are clustered together, sized by their prevalence.
-			Hover over each grape to see each variety’s average price, within the price tier.
+			Hover over each grape to see each variety’s average price and quality, within the price tier.
 		</p>
 		<div class="row justify-content-center">
 			<div id="bubbleDiv"></div>
@@ -286,6 +295,13 @@
 
 	</div>
 </section><!-- cd-section -->
+
+<section id="section6" class="cd-section">
+	<div class="container-fluid">
+		Conclusion Here
+	</div>
+</section><!-- cd-section -->
+
 	
 <script src="js/jquery-2.1.4.js"></script>
 <script src="webpage/js/main.js"></script> <!-- Resource jQuery -->
