conclusion gif and text

--- a/FINAL_COMBINED/index.html
+++ b/FINAL_COMBINED/index.html
@@ -107,8 +107,8 @@
 		</div>
 		<div class="row" style="height: 50%">
 			<div class="col-2">
-				<div class="row justify-content-center" style="height: 100%; background-color: darkslategray; border-radius: 5px; border-color: black">
-					<h5> Choose Quality Levels to Compare</h5>
+				<div class="row justify-content-center" style="height: 90%; background-color: darkslategray; border-radius: 5px; border-color: black">
+					<h4> Choose Quality Levels to Compare</h4>
 					<form>
 						<input type="checkbox" id="quality3" value="3" onchange="onSelectionChange()" checked>
 						<label for="quality3"> Quality: 3 </label><br>
@@ -123,8 +123,8 @@
 						<input type="checkbox" id="quality8" value="7" onchange="onSelectionChange()" checked>
 						<label for="quality7"> Quality: 8 </label><br>
 					</form>
-					<h5> Choose Attributes to Compare</h5>
-					<form>
+					<h4> Choose Attributes to Compare</h4>
+					<form style="font-size: 15px">
 						<input type="checkbox" id="attribute1" value="alcohol" onchange="onSelectionChange()" checked>
 						<label for="attribute1"> Alcohol </label><br>
 						<input type="checkbox" id="attribute2" value="pH" onchange="onSelectionChange()" checked>
@@ -298,7 +298,12 @@
 
 <section id="section6" class="cd-section">
 	<div class="container-fluid">
-		Conclusion Here
+		<iframe src="https://giphy.com/embed/Widn8Yco9vXDa" width="300" height="300" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/hellogiggles-wine-vino-Widn8Yco9vXDa">via GIPHY</a></p>
+		<p>
+			When choosing or talking about wine, there are many things to consider. Location, chemical attributes,
+			expert reviews and terms, and price point are all important things to keep in mind. However, It's important to
+			remember wine is meant to be enjoyed, so do what makes you, and your palette, happy.
+		</p>
 	</div>
 </section><!-- cd-section -->
 
