--- a/FINAL_COMBINED/index.html
+++ b/FINAL_COMBINED/index.html
@@ -40,7 +40,9 @@
 
 <section id="section1b" class="cd-section">
 	<div class="container-fluid">
-		Intro Here
+		<h1 style="font-size:50px">260,000,000 HECTOLITERS </h1>
+		<p style="padding-top: 0px">of wine is consumed every year worldwide.</p>
+		<p>A longstanding symbol of culture and leisure, wine has grown in variety and complexity over centuries. For wine novices, the world of wine can quite overwhelming. This guide is a visual introduction to wine, teaching the fundamentals on wine production regions, what makes a wine great, wine varieties, and price ranges. A good foundation leads to informed purchases and better-tasting wine. Good luck!</p>
 	</div>
 </section><!-- cd-section -->
 
@@ -221,7 +223,7 @@
 		<h2>DISCOVER WINE VARIETIES</h2>
 		<div class="row" style="width:100%; font-size: 10px">
 			<p>The hundreds of wine varieties available on the market can be overwhelming for a wine novice. This dashboard is designed to give a quick introduction to the top 12 most popular wines. A wordcloud of the most common descriptive words used by wine reviewers for a selected wine variety will help you quickly identify what a wine variety tastes like without having to try it</p>
-			<p>You can learn more about where the wine is produced, as well as an average price and rating from experts. Lastly, you can view experts' reccommendations, or the top wines by rating and by value (rating/price). </p>
+			<p>You can learn more about where the wine is produced, as well as an average price and rating from experts. Lastly, you can view experts' reccommendations, or the top wines by value (rating/price). </p>
 		</div>
 		<div class="container-fluid" style="height: 150vh;">
 			<div class="row justify-content-start align-items-center" style="width:75%;padding-left: 1vh; padding-right: 1vh; padding-top: 2vh">
