--- a/FINAL_COMBINED/index.html
+++ b/FINAL_COMBINED/index.html
@@ -225,7 +225,7 @@
 			<p>The hundreds of wine varieties available on the market can be overwhelming for a wine novice. This dashboard is designed to give a quick introduction to the top 12 most popular wines. A wordcloud of the most common descriptive words used by wine reviewers for a selected wine variety will help you quickly identify what a wine variety tastes like without having to try it</p>
 			<p>You can learn more about where the wine is produced, as well as an average price and rating from experts. Lastly, you can view experts' reccommendations, or the top wines by value (rating/price). </p>
 		</div>
-		<div class="container-fluid" style="height: 150vh;">
+		<div class="container-fluid" style="height: 140vh; padding-top: 20px;">
 			<div class="row justify-content-start align-items-center" style="width:75%;padding-left: 1vh; padding-right: 1vh; padding-top: 2vh">
 				<form class="form-inline">
 					<label for="categorySelector" class="col-form-label" style="margin-right:10px">Select one of the top 12 most popular wine varieties:</label>
@@ -311,7 +311,7 @@
 
 	
 <script src="js/jquery-2.1.4.js"></script>
-<script src="webpage/js/main.js"></script> <!-- Resource jQuery -->
+<script src="js/main.js"></script> <!-- Resource jQuery -->
 
 
 <!-- d3 -->
